syntax="proto3";
package pb;
option go_package = "./;pb";

message UserModel{
  // @gotags: json:"id" form:"id"
  uint32 id = 1;
  // @gotags: json:"username" form:"username"
  string username = 2;
  // @gotags: json:"created_at" form:"created_at"
  int64 created_at = 3;
  // @gotags: json:"updated_at" form:"updated_at"
  int64 updated_at = 4;
  // @gotags: json:"deleted_at" form:"deleted_at"
  int64 deleted_at = 5;
}

message UserRequest{
  // @gotags: json:"username" form:"username"
  string username = 1;
  // @gotags: json:"password" form:"password"
  string password = 2;
  // @gotags: json:"password_confirm" form:"password_confirm"
  string password_confirm = 3;
}

message UserResponse{
  // @gotags: json:"user_detail" form:"user_detail"
  UserModel user_detail = 1;
  // @gotags: json:"code" form:"code"
  uint32 code = 2;

}

service UserService{
  rpc UserRegister(UserRequest) returns (UserResponse);
  rpc UserLogin(UserRequest) returns (UserResponse);
}